--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program": "${workspaceFolder}/cmd/uploader/main.go",
+            // "program": "${workspaceFolder}/uploader/cmd/uploader/main.go",
+             "program": "${workspaceFolder}/snippet_temp/main.go",
             "cwd": "${workspaceFolder}"
         }
 
