доработал коммиты и пуш

--- a/uploader/Makefile
+++ b/uploader/Makefile
@@ -2,6 +2,6 @@
 run:
 	go run cmd/uploader/main.go
 
-# .PHONY: build
-# build:
-# 	go build -o bot.exe cmd/commanderbot/main.go
+.PHONY: build
+build:
+	go build -o committer.exe cmd/uploader/main.go
